[package]
name = "pico-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "0.3.0"
cortex-m = "0.7.4"
embedded-hal = { version = "0.2.7", features = ["unproven"]  }
rp2040-pac = "0.3.0"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
rp2040-boot2 = "0.2.0"
embedded-time = "0.12.0"
